--- a/ApiGateway/package.json
+++ b/ApiGateway/package.json
@@ -34,6 +34,7 @@
     "node-excel-export": "^1.4.2",
     "node-schedule": "^1.3.1",
     "nodemailer": "^4.4.1",
+    "otplib": "^11.0.1",
     "phantom-html-to-pdf": "^0.5.5",
     "promise": "^8.0.1",
     "request-promise": "^4.2.2",
