--- a/ApiGateway/package.json
+++ b/ApiGateway/package.json
@@ -12,37 +12,26 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "aws-sdk": "^2.260.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.2",
-    "embed-video": "^2.0.0",
     "express": "^4.16.2",
     "express-fileupload": "^0.1.4",
     "fcm-node": "^1.2.1",
-    "get-video-id": "^2.1.7",
-    "google-auth-library": "^0.11.0",
-    "googleapis": "^22.2.0",
     "jimp": "^0.2.28",
     "jsonwebtoken": "^7.4.3",
-    "log4js": "^2.5.2",
-    "mandrill-api": "^1.0.45",
     "md5": "^2.2.1",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.21",
     "mssql": "^4.1.0",
     "node-cron": "^2.0.3",
-    "node-excel-export": "^1.4.2",
     "node-schedule": "^1.3.1",
     "nodemailer": "^4.4.1",
     "otplib": "^11.0.1",
-    "phantom-html-to-pdf": "^0.5.5",
     "promise": "^8.0.1",
     "request-promise": "^4.2.2",
     "sharp": "^0.21.1",
     "socket.io": "^1.7.4",
     "stripe": "^6.25.1",
-    "uid-generator": "^1.0.0",
-    "vue-infinite-loading": "^2.4.3",
-    "vue-virtual-scroller": "^1.0.0-beta.5"
+    "uid-generator": "^1.0.0"
   }
 }
