--- a/WebClient/package.json
+++ b/WebClient/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^2.0.0",
+    "accounting": "^0.4.1",
     "axios": "^0.17.1",
     "bootstrap": "^4.1.3",
     "daterangepicker": "^3.0.3",
