--- a/ApiGateway/package.json
+++ b/ApiGateway/package.json
@@ -19,6 +19,7 @@
     "fcm-node": "^1.2.1",
     "jimp": "^0.2.28",
     "jsonwebtoken": "^7.4.3",
+    "log4js": "^6.1.0",
     "md5": "^2.2.1",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.21",
@@ -29,7 +30,6 @@
     "otplib": "^11.0.1",
     "promise": "^8.0.1",
     "request-promise": "^4.2.2",
-    "sharp": "^0.21.1",
     "socket.io": "^1.7.4",
     "stripe": "^6.25.1",
     "uid-generator": "^1.0.0"
