--- a/WebClient/package.json
+++ b/WebClient/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "node-gyp": "^6.0.1",
     "popper.js": "^1.14.4",
     "socket.io-client": "^1.7.4",
     "toastr": "^2.1.4",
@@ -46,11 +47,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.11",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.13.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.13.1",
     "vue-loader": "^13.7.2",
