--- a/ApiGateway/package.json
+++ b/ApiGateway/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "express-fileupload": "^0.1.4",
     "fcm-node": "^1.2.1",
