--- a/subscriberService/package.json
+++ b/subscriberService/package.json
@@ -2,11 +2,11 @@
   "name": "exceldata",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "debug": "node --inspect index.js",
-    "debrk": "node --inspect-brk index.js"
+    "start": "node server.js",
+    "debug": "node --inspect server.js",
+    "debrk": "node --inspect-brk server.js"
   },
   "author": "",
   "license": "ISC",
