--- a/WebClient/web.config
+++ b/WebClient/web.config
@@ -2,5 +2,19 @@
 <configuration>
     <system.webServer>
         <handlers accessPolicy="Read, Execute, Script" />
+        <staticContent>
+            <mimeMap fileExtension="." mimeType="text/plain" />
+        </staticContent>
+        <rewrite>
+            <rules>
+                <rule name="https redirection" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions>
+                        <add input="{HTTPS}" pattern="^OFF$" />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
+                </rule>
+            </rules>
+        </rewrite>
     </system.webServer>
 </configuration>
